--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.6",
+    "@ngrx/store": "^17.2.0",
     "@tailwindcss/postcss": "^4.1.0",
     "angular-eslint": "^19.3.0",
     "express": "^4.18.2",
@@ -30,6 +31,7 @@
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.17",
     "tslib": "^2.3.0",
+    "uuid": "^11.1.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
