--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "^3.5.3",
-    "typescript": "~5.2.2",
+    "typescript": "5.4",
     "typescript-eslint": "8.27.0"
   }
 }
