--- a/package.json
+++ b/package.json
@@ -13,17 +13,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.13",
-    "@angular/common": "^18.2.13",
-    "@angular/compiler": "^18.2.13",
-    "@angular/core": "^18.2.13",
-    "@angular/forms": "^18.2.13",
-    "@angular/platform-browser": "^18.2.13",
-    "@angular/platform-browser-dynamic": "^18.2.13",
-    "@angular/platform-server": "^18.2.13",
-    "@angular/router": "^18.2.13",
-    "@angular/ssr": "^17.0.6",
-    "@ngrx/store": "^17.2.0",
+    "@angular/common": "^19.2.0",
+    "@angular/compiler": "^19.2.0",
+    "@angular/core": "^19.2.0",
+    "@angular/forms": "^19.2.0",
+    "@angular/platform-browser": "^19.2.0",
+    "@angular/platform-browser-dynamic": "^19.2.0",
+    "@angular/platform-server": "^19.2.0",
+    "@angular/router": "^19.2.0",
+    "@angular/ssr": "^19.2.6",
+    "@ngrx/store": "^19.1.0",
     "@tailwindcss/postcss": "^4.1.0",
     "angular-eslint": "^19.3.0",
     "express": "^4.18.2",
@@ -32,12 +31,12 @@
     "tailwindcss": "^3.4.17",
     "tslib": "^2.3.0",
     "uuid": "^11.1.0",
-    "zone.js": "~0.14.2"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.6",
+    "@angular-devkit/build-angular": "^19.2.6",
     "@angular/cli": "^19.2.6",
-    "@angular/compiler-cli": "^18.2.13",
+    "@angular/compiler-cli": "^19.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
@@ -50,7 +49,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "^3.5.3",
-    "typescript": "5.4",
+    "typescript": "~5.7.2",
     "typescript-eslint": "8.27.0"
   }
 }
