--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.6",
+    "@ngrx/effects": "^19.1.0",
     "@ngrx/store": "^19.1.0",
     "@tailwindcss/postcss": "^4.1.0",
     "angular-eslint": "^19.3.0",
